--- a/css/style.css
+++ b/css/style.css
@@ -1,212 +1,241 @@
-@import url("https://fonts.googleapis.com/css2?family=Orbitron&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Orbitron&display=swap");
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  text-decoration: none;
   list-style: none;
+  box-sizing: border-box;
 }
 
-body {
-  background: #efefef;
+body,
+html {
+  width: 100%;
+  min-width: 1028px;
+  height: 100%;
+  overflow-y: hidden;
 }
 
 header {
-  width: 480px;
+  width: 450px;
   height: 100%;
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  background: linear-gradient(45deg, aqua, royalblue);
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(2px);
+  z-index: 4;
 }
 header h1 {
-  font: bold 50px/1 "orbitron";
-  color: #fff;
-  letter-spacing: 1px;
   position: absolute;
-  left: 20%;
   top: 50%;
-  transform: translateY(-200%);
-}
-header h1::before {
-  content: "UI/UX DEVELOPMENT";
-  font: 14px/1 "orbitron";
+  left: 50px;
+  margin-top: -300px;
+  font: bold 40px/1 "orbitron";
   color: #fff;
-  letter-spacing: 2px;
-  position: absolute;
-  left: 0;
-  top: 140px;
 }
 header h1::after {
   content: "";
   display: block;
-  width: 140px;
-  height: 2px;
+  width: 160px;
+  height: 3p;
   background: #fff;
-  margin-top: 20px;
+  margin-top: 8px;
 }
-header ul {
+header #navi {
+  width: 100%;
   position: absolute;
-  left: 60px;
-  bottom: 100px;
+  top: 50%;
+  left: 0;
+  transform: translateY(-30%);
 }
-header ul li {
-  float: left;
-  margin-left: 10px;
-}
-header ul li a {
-  font-size: 20px;
-  color: #fff;
-}
-header ul li a span {
-  display: inline-block;
-  transform: scale(0.7);
+header #navi li {
+  width: 450px;
+  padding: 30px 50px;
+  position: relative;
+  overflow: hidden;
+  opacity: 0.4;
+  cursor: pointer;
+  transition: transform 1.4s, opacity 1.4s;
   transform-origin: left center;
 }
-
-@media (min-width: 335px) and (max-width: 755px) {
-  header {
-    left: 50%;
-    bottom: 10px;
-    transform: translateX(-50%);
-    display: flex;
-    width: 100%;
-    height: 200px;
-    align-items: center;
-    justify-content: center;
-    z-index: 2;
-  }
-  header h1 {
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -120%);
-    font-size: 5vw;
-  }
-  header h1::before {
-    top: 64px;
-    font-size: 12px;
-  }
-  header ul {
-    left: 50%;
-    bottom: 8%;
-    transform: translateX(-50%);
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+header #navi li h2 {
+  font: bold 12px/1 "orbitron";
+  color: #fff;
+  letter-spacing: 1px;
+  margin-bottom: 15px;
 }
-@media (min-width: 756px) and (max-width: 1023px) {
-  header {
-    width: 350px;
-  }
-  header h1 {
-    left: 50%;
-    transform: translate(-50%, -200%);
-  }
+header #navi li h2::after {
+  content: "";
+  display: block;
+  width: 20px;
+  height: 1px;
+  background: #fff;
+  margin-top: 7px;
+  margin-bottom: 3px;
+  transition: 1.4s;
 }
-img {
-  max-width: 1000px !important;
+header #navi li p {
+  font: 10px/1 "arial";
+  color: #fff;
+  letter-spacing: 1px;
+  opacity: 0.7;
+}
+header #navi li.on {
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0));
+  transform: scale(1.3);
+  opacity: 1;
+}
+header #navi li.on h2::after {
+  width: 150px;
 }
 
 main {
-  margin-left: 480px;
-  min-height: 600px;
-  padding: 20px;
-}
-main ul {
+  position: relative;
   width: 100%;
-  margin-bottom: 10px;
-  margin-right: 20px;
+  height: 100%;
 }
-main ul::after {
+
+section {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+section article {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  overflow: hidden;
+}
+section article video {
+  width: 120%;
+  height: 100%;
+  object-fit: cover;
+  filter: brightness(0.5);
+}
+section article .slogan {
+  position: absolute;
+  right: 8%;
+  top: 50%;
+  transform: translateY(-60%);
+  text-align: right;
+  padding: 50px;
+  perspective: 900px;
+  display: flex;
+  flex-flow: column;
+  align-items: flex-start;
+}
+section article .slogan::before {
   content: "";
   display: block;
-  clear: both;
+  width: 500px;
+  height: 500px;
+  border: 1px solid #fff;
+  position: absolute;
+  top: 0;
+  right: 0;
+  opacity: 0;
+  transition: all 1.5s;
 }
-main ul li {
-  float: right;
-  margin-right: 20px;
-  width: 100px;
-  height: 26px;
+section article .slogan h2 {
+  display: inline-block;
+  overflow: hidden;
+  position: relative;
+  margin-bottom: 20px;
 }
-main ul li a {
+section article .slogan h2 .inner {
+  text-align: left;
+  font: normal 90px/1 "Abril Fatface", "Black Han Sans", sans-serif;
+  color: #fff;
+  position: relative;
+  transform: scaleY(1.05);
+  opacity: 0;
+  transition: opaicty 0.2s 0.5s;
+}
+section article .slogan h2::after {
+  content: "";
   display: block;
   width: 100%;
   height: 100%;
   background: #fff;
-  font: bold 7px/26px "orbitron";
-  color: #777;
-  letter-spacing: 1px;
-  text-align: center;
-  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.05);
+  position: absolute;
+  top: 0;
+  right: -100%;
+  transition: right ease-in-out 1s;
 }
-main ul li.on a {
-  background: linear-gradient(45deg, aqua, cornflowerblue);
+section article .slogan .p1 {
+  display: inline-block;
+  overflow: hidden;
+  position: relative;
+  margin-right: 14px;
+}
+section article .slogan .p1 .inner {
+  font: 20px/1 "verdana";
   color: #fff;
-  box-shadow: 0px 5px 20px rgba(0, 255, 255, 0.5);
+  position: relative;
+  opacity: 0;
+  transition: opacity 0.2s 0.8s;
 }
-main section {
-  width: 100%;
-}
-main section::after {
+section article .slogan .p1::after {
   content: "";
   display: block;
-  clear: both;
-}
-main section article {
-  width: 20%;
-  float: left;
-  overflow: hidden;
-  padding: 12px;
-}
-main section article .inner {
   width: 100%;
+  height: 100%;
   background: #fff;
-  padding: 14px;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
+  position: absolute;
+  top: 0;
+  right: -100%;
+  transition: right ease-in-out 1s 0.3s;
 }
-main section article .inner img {
-  width: 100%;
+section article.on {
+  z-index: 3;
 }
-main section article .inner h2 {
-  font: bold 11px/1 "orbitron";
-  letter-spacing: 1px;
-  color: #444;
-  margin-top: 15px;
-  margin-bottom: 5px;
+section article.on .slogan::before {
+  opacity: 1;
+  transform: rotateY(220deg);
 }
-main section article .inner p {
-  font: 10px/1.2 "arial";
-  color: #777;
-  margin-bottom: 15px;
+section article.on .slogan h2 .inner,
+section article.on .slogan .p1 .inner {
+  opacity: 1;
 }
-@media (min-width: 335px) and (max-width: 755px) {
-  main section article {
-    width: 100%;
-  }
+section article.on .slogan h2::after,
+section article.on .slogan .p1::after {
+  right: 100%;
 }
-@media (min-width: 756px) and (max-width: 1023px) {
-  main section article {
-    width: 50%;
-  }
+section article.lower {
+  z-index: 2;
 }
-@media (min-width: 1024px) and (max-width: 1979px) {
-  main section article {
-    width: 33.3333%;
-  }
+section article:nth-of-type(1).mask {
+  -webkit-mask: url(../src/mask1.png);
+  -webkit-mask-size: 2300% 100%;
+  animation: mask-play 1.4s steps(22) forwards;
+}
+section article:nth-of-type(2).mask {
+  -webkit-mask: url(../src/mask2.png);
+  -webkit-mask-size: 3000% 100%;
+  animation: mask-play 1.4s steps(29) forwards;
+}
+section article:nth-of-type(3).mask {
+  -webkit-mask: url(../src/mask3.png);
+  -webkit-mask-size: 7100% 100%;
+  animation: mask-play 1.4s steps(70) forwards;
+}
+section article:nth-of-type(4).mask {
+  -webkit-mask: url(../src/mask4.png);
+  -webkit-mask-size: 7400% 100%;
+  animation: mask-play 1.4s steps(73) forwards;
 }
 
-@media (min-width: 335px) and (max-width: 755px) {
-  main {
-    margin-left: unset;
-    margin-top: 200px;
-    width: 100%;
+@keyframes mask-play {
+  0% {
+    -webkit-mask-position: 0% 0%;
   }
-}
-@media (min-width: 756px) and (max-width: 1023px) {
-  main {
-    margin-left: 350px;
+  100% {
+    -webkit-mask-position: 100% 0%;
   }
 }
 
