--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,8 @@
-@charset "utf-8";
-@import "reset";
-@import url("https://fonts.googleapis.com/css2?family=Orbitron&display=swap");
+@charset 'utf-8';
+@import url("https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Orbitron&display=swap");
 
+@import "reset";
 @import "header";
-@import "content";
+@import "show";
+@import "sns";
